Fix overflow in username color picker

--- a/src/chrome-popup/components/Page.lazy.module.css
+++ b/src/chrome-popup/components/Page.lazy.module.css
@@ -10,7 +10,7 @@
 
 .content {
   flex: 1;
-  overflow: auto;
+  overflow-x: hidden;
   padding: var(--boomer-safe-space);
 }
 
